[package]
authors = ["patrick.fernie@gmail.com"]
description = "Implementation of Cookie storage and retrieval"
name = "cookie_store"
version = "0.12.0"
edition = "2018"
repository = "https://github.com/pfernie/cookie_store"
documentation = "https://docs.rs/cookie_store"
readme = "README.md"
license = "MIT/Apache-2.0"

[features]
default = ["domains_lru"]

# uses `indexmap::IndexMap` in lieu of HashMap internally, so cookies are maintained in insertion/creation order
preserve_order = ["indexmap"]
# uses `lru::LruCache` instead of HashMap or IndexMap for storing cookies by domain, keeping a maximum of 1000 domains
domains_lru = ["lru"]

[dependencies]
idna = "0.2.0"
log = "0.4.8"
publicsuffix = { version = "1.5.4", default-features = false }
serde = { version = "1.0.111", features = [ "derive" ] }
serde_json = "1.0.55"
time = "0.2.16"
url = "2.1.1"
lru = { version = "0.7", optional = true }

indexmap = { version = "1.4.0", optional = true }

[dependencies.cookie]
features = ["percent-encode"]
version = "0.14.1"

[dev-dependencies]
env_logger = "0.7.1"
pretty_assertions = "0.6.1"
